--- a/homepage.html
+++ b/homepage.html
@@ -9,9 +9,10 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="mainheading">117366653 - IS1113 Project!</h1>
+        <h1 class="mainheading">117321436 - IS1113 Project!</h1>
         
-        <a href="cv_page1.html">Curriculum Vitae</a>
-        <a href = "interests/sports.html">Interests</a>
+        <a href="cvpage1.html">Curriculum Vitae</a>
+        <br/>
+        <a href="Interests/Sports.html">Interests</a>
     </body>
 </html>
