--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -12,8 +12,13 @@
     <body>
         <h1 class="mainheading">Sports</h1>
         
-        <p><strong>Favourite Sport:</Strong> Cricket (obviously)</p>
-        <p><strong>Training:</strong>Hell No!</p>
+        <p><strong>Favourite Sport:</Strong> Camogie! </p>
+        <p><strong>Training:</strong> Usually 2 times a week </p>
+        <p><strong>Position: </strong> Midfield</p>
+        <p><strong>Team Name: </strong> Brian Dillons</p>
+        <p><strong>Team Colors: </strong> Blue and White</p>
+
+
         
 <a href = "Interests/Travel.html" class = "btn btn-dark">Next</a>
     </body>
