--- a/Interests/Travel.html
+++ b/Interests/Travel.html
@@ -35,9 +35,9 @@
 	<div class="section" id= "section1"> Most travelled to:France </div>
 	<div class="section" id= "section2"> Want to visit: China</div>
 	<div class="section" id= "section3">
-	    Settle in: Dublin
+	    Want to settle in: Dublin
 	    <br/>
-	    <a href= "../homepage.html" class = "btn btn-success"> Home</a>
+	    <a href= "../homepage.html" class = "btn btn-success"> Back to homepage</a>
 	</div>
 	</div>
 
@@ -47,7 +47,7 @@
         <p><strong>Favourite Sport:</Strong> Cricket (obviously)</strong></p>
         <p><strong>Training:</strong>Hell No!</p>
         
-        <a href = "homepage.html" class = "btn btn-dark">Next</a>
+        <a href = "homepage.html" class = "btn btn-dark">Back to homepage</a>
        
     </body>
 </html>
