--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -19,7 +19,7 @@
         <p><strong>Team Colors: </strong> Blue and White</p>
 
 
-        
-<a href = "Interests/Travel.html" class = "btn btn-dark">Next</a>
+                <a href="Travel.html">Go to sports</a>
+
     </body>
 </html>
