--- a/homepage.html
+++ b/homepage.html
@@ -14,5 +14,7 @@
         <a href="cvpage1.html">Curriculum Vitae</a>
         <br/>
         <a href="Interests/Sports.html">Interests</a>
+        <br/>
+        <a href ="ebusiness/EBus1.php">EBus</a>
     </body>
 </html>
