--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -10,7 +10,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="mainheading">Sports</h1>
+        <h1 style="color:blue;" class="mainheading" > Sports! </h1>
         
         <p><strong>Favourite Sport:</Strong> Camogie! </p>
         <p><strong>Training:</strong> Usually 2 times a week </p>
@@ -19,7 +19,7 @@
         <p><strong>Team Colors: </strong> Blue and White</p>
 
 
-                <a href="Travel.html">Go to sports</a>
+                <a href="Travel.html">Go to Travel!</a>
 
     </body>
 </html>
