--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>117321436 </title>
-         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="mystylesheets.css" type="text/css"/>
+
+       
         <!-- Adding bootstrap-->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -15,6 +17,6 @@
         <br/>
         <a href="Interests/Sports.html"> Interests</a>
         <br/>
-        <a href ="ebusiness/EBus1.php"> EBus</a>
+        <a href="Interests/ebusiness/EBus1.php"> EBus</a>
     </body>
 </html>
