--- a/homepage.html
+++ b/homepage.html
@@ -17,6 +17,6 @@
         <br/>
         <a href="Interests/Sports.html"> Interests</a>
         <br/>
-        <a href="Interests/ebusiness/EBus1.php"> EBus</a>
+        <a href="ebusiness/EBus1.php"> EBus</a>
     </body>
 </html>
