--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -11,17 +11,24 @@ h1 {
 p  {
     color: black;
     font-family: courier;
-    font-size: 160%;
+    font-size: 150%;
 }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #dddddd;
-    font-size: 100%;
+    font-size: 150%;
 }
 li {
     display: inline;
+}
+
+img {
+    float: right;
+    position: absolute;
+    right: 20%;
+    top: 20%;
 }
 </style>
         
@@ -52,11 +59,22 @@ li {
         <p><strong>Team Name: </strong> Brian Dillons</p>
         <p><strong>Team Colors: </strong> Blue and White</p>
         
+<br/>
+<br/>
+
+<br/>
+
+<br/>
+
+<br/>
+
+<br/>
 
 
-<p> I started playing camogie when I was 9 years old. My team are Senior B. The picture to the right is the day we won the intermediate championship in 2016. I also used to play on the under 16 Cork team. </p>
 
-<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" style="margin-left:25%""width:200px;height:200px;">
+<p> I started playing camogie when I was 9 years old. In 2016 we won the intermediate championship, so we have been playing Senior B ever since. I also used to play on the under 16 Cork team. </p>
+
+<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" style="margin-left:25%""width:100px;height:100px;">
 
 <br/>
 <br/>
