--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -4,9 +4,9 @@
         
         <style>
 h1 {
-    color: navy;
-    font-family: verdana;
-    font-size: 300%;
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
@@ -23,12 +23,24 @@ ul {
 li {
     display: inline;
 }
+ul li a:hover{
+  color:black;
+  background:blue;
+}
 
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
+}
 img {
     float: right;
     position: absolute;
     right: 20%;
-    top: 20%;
+    top: 30%;
 }
 </style>
         
@@ -74,7 +86,7 @@ img {
 
 <p> I started playing camogie when I was 9 years old. In 2016 we won the intermediate championship, so we have been playing Senior B ever since. I also used to play on the under 16 Cork team. </p>
 
-<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" style="margin-left:25%""width:100px;height:100px;">
+<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" style="margin-left:25%""width:60px;height:60px;">
 
 <br/>
 <br/>
