--- a/CV/cvpage3.html
+++ b/CV/cvpage3.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <style>
+        <style>
 h1 {
-    color: navy;
-    font-family: verdana;
-    font-size: 300%;
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
     font-family: courier;
-    font-size: 150%;
+    font-size: 100%;
 }
 ul {
     list-style-type: none;
@@ -22,7 +22,26 @@ ul {
 li {
     display: inline;
 }
+ul li a:hover{
+  color:black;
+  background:blue;
+}
 
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
+}
+
+img {
+    float: right;
+    position: absolute;
+    right: 20%;
+    top: 20%;
+}
 img {
     float: right;
     position: absolute;
@@ -44,25 +63,25 @@ img {
         
          <h1 align = "center" style="background-color:DodgerBlue;"  class="mainheading" > Work Experience </h1>
            <ul>
-  <li><a href="homepage.html">Home</a></li>
-  <li><a href="Interests/Sports.html">Interests</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
-   <li><a href="ebusiness/EBus1.php">EBusiness</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
- 
+ <li><a href="../homepage.html">Home</a></li>
+  <li><a href="../Interests/Sports.html">Interests</a></li>
+  <li><a href="../CV/CV_page1.html">CV</a></li>
+   <li><a href="../ebusiness/myproduct.html">EBusiness</a></li>
+  <li> <a href="../https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
   
 </ul>
 
        <div align = "center">
-        <p><strong>Scoozis: </Strong> At the moment, I am currenlty wokring as a waitress in Scoozis restaurant. My duties include setting and clearing the tables, taking customers orders and bringing them their food and drink. I usually work 3 times a week and on average do 20 hours a week.</p>
+           <h3><strong>Scoozis: </Strong> </h3>
+        <p>At the moment, I am currenlty wokring as a waitress in Scoozis restaurant. My duties include setting and clearing the tables, taking customers orders and bringing them their food and drink. I usually work 3 times a week and on average do 20 hours a week.</p>
         <br/>
         <br/>
+        <h3><strong>Baby Sitting: </strong></h3>
+        <p> From 2015-2017 I babysat my neighbours children during the summers and other school holiday 3 times a week. I was in charge of making them food, putting them to bed and generally entertaining them throughout the day.</p>
         <br/>
-        <p><strong>Baby Sitting: </strong> From 2015-2017 I babysat my neighbours children during the summers and other school holiday 3 times a week. I was in charge of making them food, putting them to bed and generally entertaining them throughout the day.</p>
         <br/>
-        <br/>
-        <br/>
-        <p><strong>Debenhams: </Strong> During Christmas 2017 I worked in Debenhams, St. Patricks Street in the cosmetics department. I worked mainly in the perfume section, assisting and serving customers as needed. </p>
+        <h3><strong>Debenhams: </Strong> </h3>
+        <p>During Christmas 2017 I worked in Debenhams, St. Patricks Street in the cosmetics department. I worked mainly in the perfume section, assisting and serving customers as needed. </p>
        <br/>
        <br/>
        <br/>
