--- a/Interests/Travel.html
+++ b/Interests/Travel.html
@@ -3,10 +3,10 @@
     <head>
         
         <style>
-            h1 {
-    color: navy;
-    font-family: verdana;
-    font-size: 100%;
+ h1 {
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
@@ -22,6 +22,25 @@ ul {
 }
 li {
     display: inline;
+}
+ul li a:hover{
+  color:black;
+  background:blue;
+}
+
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
+}
+img {
+    float: right;
+    position: absolute;
+    right: 20%;
+    top: 20%;
 }
 
 
@@ -64,30 +83,38 @@ li {
   <li><a href="../homepage.html">Home</a></li>
   <li><a href="../Interests/Sports.html">Interests</a></li>
   <li><a href="../CV/CV_page1.html">CV</a></li>
-   <li><a href="../ebusiness/EBus1.php">EBusiness</a></li>
+   <li><a href="../ebusiness/myproduct.html">EBusiness</a></li>
+  <li> <a href="../https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
   
  
   
 </ul>
 
-<body style = "background-color:#deabed;"> 
-
+<body>
         <div id="pagepiling">
-	<div  class="section" id= "section1"> Most travelled to: France.
+	<div  class="section" id= "section1"> <p><strong>Most travelled to:</strong> France.
 	<br/>
-	Reason : My family have gone to France 4 times together as it has so many differesnt places to travel to. It feels like a new country everytime!
+	<strong>Reason :</strong> My family have gone to France 4 times together as it has so many differesnt places to travel to. It feels like a new country everytime!
 <br/>
+
+</p>
 </div>
-	<div  class="section" id= "section2"> Want to visit: China
+
+	<div  class="section" id= "section2"><p> <strong>Want to visit:</strong> China
 	<br/>
-	Reason: It seems like a beautiful country where there are a lot of new cultures and food to experience.
+	<strong>Reason:</strong> It seems like a beautiful country where there are a lot of new cultures and food to experience.
 <br/>
+
+</p>
 	</div>
+	
 	<div  class="section" id= "section3">
-	    Want to settle in: Dublin
+	   <p><strong>Want to settle in:</strong> Dublin
 	    <br/>
-	   Reason: My sister lives here and its only a two and a half hour drive from where Im from.
+	   <strong>Reason:</strong> My sister lives here and its only a two and a half hour drive from where Im from.
 	   <br/>
+
+	   </p>
 <br/>
 	   <br/>
 	    <a href = "cloud9.html" class = "btn btn-dark">  Go To Cloud Services</a>
