--- a/CV/CV_page1.html
+++ b/CV/CV_page1.html
@@ -3,9 +3,9 @@
     <head>
           <style>
 h1 {
-    color: navy;
-    font-family: verdana;
-    font-size: 300%;
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
@@ -22,7 +22,19 @@ ul {
 li {
     display: inline;
 }
+ul li a:hover{
+  color:black;
+  background:blue;
+}
 
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
+}
 img {
     float: right;
     position: absolute;
@@ -43,11 +55,11 @@ img {
         
          <h1 align = "center" style="background-color:DodgerBlue;"  class="mainheading" > Personal Information </h1>
            <ul>
-  <li><a href="homepage.html">Home</a></li>
-  <li><a href="Interests/Sports.html">Interests</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
-   <li><a href="ebusiness/EBus1.php">EBusiness</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
+  <li><a href="../homepage.html">Home</a></li>
+  <li><a href="../Interests/Sports.html">Interests</a></li>
+  <li><a href="../CV/CV_page1.html">CV</a></li>
+   <li><a href="../ebusiness/myproduct.html">EBusiness</a></li>
+  <li> <a href="../https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
  
   
 </ul>
