--- a/CV/cvpage2.html
+++ b/CV/cvpage2.html
@@ -4,14 +4,14 @@
     <head>
           <style>
 h1 {
-    color: navy;
-    font-family: verdana;
-    font-size: 300%;
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
     font-family: courier;
-    font-size: 150%;
+    font-size: 100%;
 }
 ul {
     list-style-type: none;
@@ -22,6 +22,19 @@ ul {
 }
 li {
     display: inline;
+}
+ul li a:hover{
+  color:black;
+  background:blue;
+}
+
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
 }
 
 img {
@@ -45,12 +58,11 @@ img {
         
          <h1 align = "center" style="background-color:DodgerBlue;"  class="mainheading" > Education </h1>
            <ul>
-  <li><a href="homepage.html">Home</a></li>
-  <li><a href="Interests/Sports.html">Interests</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
-   <li><a href="ebusiness/EBus1.php">EBusiness</a></li>
-  <li><a href="CV/CV_page1.html">CV</a></li>
- 
+  <li><a href="../homepage.html">Home</a></li>
+  <li><a href="../Interests/Sports.html">Interests</a></li>
+  <li><a href="../CV/CV_page1.html">CV</a></li>
+   <li><a href="../ebusiness/myproduct.html">EBusiness</a></li>
+  <li> <a href="../https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
   
 </ul>
 
