--- a/ebusiness/myproduct.html
+++ b/ebusiness/myproduct.html
@@ -4,24 +4,37 @@
         
         <style>
 h1 {
-    color: blue;
-    font-family: verdana;
-    font-size: 300%;
+    color: black;
+    font-family: courier;
+    font-size: 250%;
 }
 p  {
     color: black;
     font-family: courier;
-    font-size: 160%;
+    font-size: 150%;
 }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #dddddd;
-    font-size: 100%;
+    font-size: 150%;
 }
 li {
     display: inline;
+}
+ul li a:hover{
+  color:black;
+  background:blue;
+}
+
+ul li{
+  list-style: none;
+  display: inline;
+position: relative;  
+margin-left:130px;
+transform:translate(20%,30%);
+font-size:22px;
 }
 </style>
         
