--- a/Interests/Travel.html
+++ b/Interests/Travel.html
@@ -81,10 +81,10 @@ img {
 
  <ul>
   <li><a href="../homepage.html">Home</a></li>
-  <li><a href="../Interests/Sports.html">Interests</a></li>
+  <li><a href="Sports.html">Interests</a></li>
   <li><a href="../CV/CV_page1.html">CV</a></li>
    <li><a href="../ebusiness/myproduct.html">EBusiness</a></li>
-  <li> <a href="../https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
+  <li> <a href="https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity"> My Github</a></li>
   
  
   
