--- a/ebusiness/myproduct.html
+++ b/ebusiness/myproduct.html
@@ -50,7 +50,7 @@ font-size:22px;
   <li><a href="homepage.html">Home</a></li>
   <li><a href="Interests/Sports.html">Interests</a></li>
   <li><a href="CV/CV_page1.html">CV</a></li>
-   <li><a href="ebusiness/EBus1.php">EBusiness</a></li>
+   <li><a href="EBus1.php">EBusiness</a></li>
   <li><a href="https://github.com/StephanieMangan/IS1113117321436/graphs/commit-activity">GitHub</a></li>
  
   
