--- a/homepage.html
+++ b/homepage.html
@@ -63,14 +63,7 @@
                 
                 <br/>
                 <br/>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+              
             </div>
         </div>
     </section>
@@ -83,16 +76,13 @@
 	<div id="footerCV">
 		<div align = "center" id="social_media_icons" >
 		<ul>
-			<li><a href="http://www.facebook.com/" >
-				<img src="https://seeklogo.com/images/F/facebook-logo-58E30FB0A9-seeklogo.com.png" style="width:30px;height:30px;"id="icon_size">
+			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
+				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" style="width:30px;height:30px;"id="icon_size">
 			</a></li>	
-			<li><a href="https://www.instagram.com/" >
+			<li><a href="https://www.instagram.com/smtechnoligies/" >
 				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" style="width:30px;height:30px;"id="icon_size">
 			</a></li>					
-			<li><a href="https://www.linkedin.com/in/" >
-				<img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-linkedin-512.png"style="width:30px;height:30px;" id="icon_size">
-			</a></li>	
-			<li><a href="https://twitter.com/" >
+			<li><a href="https://twitter.com/smtechnoligies" >
 				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" style="width:30px;height:30px;"id="icon_size">
 			</a></li>						
 		</ul>	
