--- a/Interests/Travel.html
+++ b/Interests/Travel.html
@@ -92,26 +92,26 @@ img {
 
 <body>
         <div id="pagepiling">
-	<div  class="section" id= "section1"> <p><strong>Most travelled to:</strong> France.
+	<div  class="section" id= "section1"> <p><strong>Most travelled to: France.</strong>
 	<br/>
-	<strong>Reason :</strong> My family have gone to France 4 times together as it has so many differesnt places to travel to. It feels like a new country everytime!
+	<strong>Reason : My family have gone to France 4 times together as it has so many differesnt places to travel to. It feels like a new country everytime!</strong>
 <br/>
 
 </p>
 </div>
 
-	<div  class="section" id= "section2"><p> <strong>Want to visit:</strong> China
+	<div  class="section" id= "section2"><p> <strong>Want to visit: China</strong>
 	<br/>
-	<strong>Reason:</strong> It seems like a beautiful country where there are a lot of new cultures and food to experience.
+	<strong>Reason: It seems like a beautiful country where there are a lot of new cultures and food to experience.</strong>
 <br/>
 
 </p>
 	</div>
 	
 	<div  class="section" id= "section3">
-	   <p><strong>Want to settle in:</strong> Dublin
+	   <p><strong>Next place I will be traveling to is: Ios </strong>
 	    <br/>
-	   <strong>Reason:</strong> My sister lives here and its only a two and a half hour drive from where Im from.
+	   <strong>In June, I will be going to Ios, Greece for 2 and a half weeks with a group of my friends. I am very excited!!</strong>
 	   <br/>
 
 	   </p>
