--- a/Interests/cloud9.html
+++ b/Interests/cloud9.html
@@ -36,12 +36,7 @@ margin-left:130px;
 transform:translate(20%,30%);
 font-size:22px;
 }
-img {
-    float: right;
-    position: absolute;
-    right: 20%;
-    top: 20%;
-}
+
         </style>
         
         <meta charset = "utf-8">
@@ -93,11 +88,11 @@ img {
         <div id="pagepiling">
 	<div  align = "center" class="section" id= "section1"> <p><strong>Software as a Service (SaaS) - Salesforce</strong>
 	<br/>
-	Sales force was launched in 1999 and has grown exponentially ever since, with 150000 customers today. The headquarters are located in San Francisco, California. The CRM product is by far the most popular with a market share if 19.7%. It also has a customer relationship management platform that includes a marketing cloud solution
+	Sales force was launched in 1999 and has grown exponentially ever since, with 150000 customers today. The headquarters are located in San Francisco, California. The CRM product is by far the most popular with a market share if 19.7%. It also has a customer relationship management platform that includes a marketing cloud solution. </p>
 <br/>
-<img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/83/Salesforce_logo.svg/1200px-Salesforce_logo.svg.png" style= "width:300px;height:150px;">
+<br/>
+<p><img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/83/Salesforce_logo.svg/1200px-Salesforce_logo.svg.png" style= "width:200px;height:150px;">
 <br/>*To visit this webpage click <a href="https://www.salesforce.com/eu/" > here </a>*
-
 </p>
 </div>
 
@@ -105,7 +100,7 @@ img {
 	<br/>
 	Cloud9 is a cloud-based integrated development environment (IDE) that lets you write, run, and debug your code with just a browser. It includes a code editor, debugger, and terminal. Cloud9 comes pre-packaged with essential tools for popular programming languages including JavaScript, Python, PHP, and more, so you don’t need to install files or configure your development machine to start new projects
 <br/>
-<img src="https://d1u5p3l4wpay3k.cloudfront.net/lolesports_gamepedia_en/f/fd/Cloud9.png?version=c5dd84c2c341690624f02ffae164b945" style= "width:300px;height:150px;">
+<img src="https://dka575ofm4ao0.cloudfront.net/pages-transactional_logos/retina/8389/vz1XuNqHTyfO4YsqI3f2" style= "width:200px;height:150px;">
 <br/>*To visit this webpage click <a href="http://cloud9.gg" > here </a>*
 </p>
 </div>
@@ -115,7 +110,7 @@ img {
 	Amazon Web Services is a subsidiary of Amazon.com that provides on-demand cloud computing platforms to individuals, companies and governments, on a paid subscription basis. Amazon web services are a cloud computing platform offered by the amazon- a wide system of pay as you go data centres that provide the infrastructure to deal world Wide Web
 
 	   <br/>
-	   <img src="https://targetjobs.co.uk/sites/targetjobs.co.uk/files/public/field_ad_org_logo/amazon.png" style= "width:300px;height:150px;">
+	   <img src="https://targetjobs.co.uk/sites/targetjobs.co.uk/files/public/field_ad_org_logo/amazon.png" style= "width:200px;height:150px;">
 <br/>	*To visit this webpage click <a href="https://www.amazon.com" > here </a>*</p>
 
 	</div>
@@ -125,7 +120,7 @@ img {
  Gmail is a free, advertising-supported email service developed by Google. Users can access Gmail on the web and using third-party programs that synchronize email content through POP or IMAP protocols
 
    <br/>
-   	   <img src="https://www.digitalunite.com/sites/default/files/images/Screen%20Shot%202012-11-28%20at%207.53.48%20AM.png" style= "width:300px;height:150px;">
+   	   <img src="https://www.digitalunite.com/sites/default/files/images/Screen%20Shot%202012-11-28%20at%207.53.48%20AM.png" style= "width:200px;height:150px;">
 <br/>*To visit this webpage click <a href="https://www.google.com/gmail/" > here </a>*</p>
 
 <br/>
