--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,7 @@
                 
                 <br/>
                 <br/>
-                <p><img src="https://scontent-dub4-1.xx.fbcdn.net/v/t34.0-12/28510887_1883393775046216_367308948_n.jpg?oh=5d04bf5e586ef39b3701051ec2275409&oe=5A975F7E" style="margin-left:20%""width:30px;height:30px;">
+                <p><img src="https://cdn.dribbble.com/users/134160/screenshots/1339898/sm_1x.jpg" style="margin-left:30%  ; width:500px;height:400px;">
 
        <br/>
        <br/>
