--- a/CV/CV_page1.html
+++ b/CV/CV_page1.html
@@ -6,12 +6,20 @@ h1 {
     color: black;
     font-family: courier;
     font-size: 250%;
+    text-align:center;
 }
+
+
 p  {
     color: black;
     font-family: courier;
     font-size: 150%;
 }
+
+div {
+        text-align:center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -53,7 +61,7 @@ img {
     </head>
     <body>
         
-         <h1 align = "center" style="background-color:DodgerBlue;"  class="mainheading" > Personal Information </h1>
+         <h1 style="background-color:DodgerBlue;"  class="mainheading" > Personal Information </h1>
            <ul>
   <li><a href="../homepage.html">Home</a></li>
   <li><a href="../Interests/Sports.html">Interests</a></li>
@@ -64,7 +72,7 @@ img {
   
 </ul>
 
-        <div align = "center">
+        <div>
         <p><strong>Name:</Strong>Stephanie Mangan</p>
         <br/>
         <p><strong>Date Of Birth:</strong>04/01/99</p>
@@ -95,9 +103,9 @@ img {
        
        <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
-        <div  align = "center" class="row">
+        <div class="row">
 
-            <div align = "center"  class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <p></p>
                 <p><a href="mailto:117321436@umail.ucc.ie">117321436@umail.ucc.ie</a>
@@ -116,16 +124,16 @@ img {
 
        <!--<footer>-->
 	<div id="footerCV">
-		<div align = "center" id="social_media_icons" >
+		<div id="social_media_icons" >
 		<ul>
 			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
-				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" alt ="logo" style="width:30px;height:30px;">
 			</a></li>	
 			<li><a href="https://www.instagram.com/smtechnoligies/" >
-				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>					
 			<li><a href="https://twitter.com/smtechnoligies" >
-				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>						
 		</ul>	
 		</div>
@@ -134,7 +142,7 @@ img {
 		<br/>
 		<br/>
 		
-		<div align = "Center" id="copyright">
+		<div id="copyright">
   		&copy; Stephanie Mangan
   		<p></p>
 	</div>
