--- a/CV/cvpage3.html
+++ b/CV/cvpage3.html
@@ -6,12 +6,18 @@ h1 {
     color: black;
     font-family: courier;
     font-size: 250%;
+    text-align:center;
+
 }
 p  {
     color: black;
     font-family: courier;
     font-size: 100%;
 }
+div {
+        text-align:center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -61,7 +67,7 @@ img {
     </head>
     <body>
         
-         <h1 align = "center" style="background-color:DodgerBlue;"  class="mainheading" > Work Experience </h1>
+         <h1 style="background-color:DodgerBlue;"  class="mainheading" > Work Experience </h1>
            <ul>
  <li><a href="../homepage.html">Home</a></li>
   <li><a href="../Interests/Sports.html">Interests</a></li>
@@ -71,7 +77,7 @@ img {
   
 </ul>
 
-       <div align = "center">
+       <div>
            <h3><strong>Scoozis: </Strong> </h3>
         <p>At the moment, I am currenlty wokring as a waitress in Scoozis restaurant. My duties include setting and clearing the tables, taking customers orders and bringing them their food and drink. I usually work 3 times a week and on average do 20 hours a week.</p>
         <br/>
@@ -101,11 +107,11 @@ img {
        <br/>
 
        
-       <!-- Contact Section -->
+        <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
-        <div  align = "center" class="row">
+        <div class="row">
 
-            <div align = "center"  class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <p></p>
                 <p><a href="mailto:117321436@umail.ucc.ie">117321436@umail.ucc.ie</a>
@@ -124,16 +130,16 @@ img {
 
        <!--<footer>-->
 	<div id="footerCV">
-		<div align = "center" id="social_media_icons" >
+		<div id="social_media_icons" >
 		<ul>
 			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
-				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" alt ="logo" style="width:30px;height:30px;">
 			</a></li>	
 			<li><a href="https://www.instagram.com/smtechnoligies/" >
-				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>					
 			<li><a href="https://twitter.com/smtechnoligies" >
-				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>						
 		</ul>	
 		</div>
@@ -142,7 +148,7 @@ img {
 		<br/>
 		<br/>
 		
-		<div align = "Center" id="copyright">
+		<div id="copyright">
   		&copy; Stephanie Mangan
   		<p></p>
 	</div>
