--- a/Interests/Travel.html
+++ b/Interests/Travel.html
@@ -7,11 +7,16 @@
     color: black;
     font-family: courier;
     font-size: 250%;
+     text-align:center;
+
 }
 p  {
     color: black;
     font-family: courier;
     font-size: 150%;
+}
+div {
+     text-align:center;
 }
 ul {
     list-style-type: none;
