--- a/Interests/cloud9.html
+++ b/Interests/cloud9.html
@@ -8,11 +8,18 @@
     font-family: courier;
     font-size: 250%;
 }
+div {
+        text-align:center;
+}
 p  {
     color: black;
     font-family: courier;
     font-size: 150%;
 }
+body{
+ background-color:#deabed;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -83,10 +90,10 @@ font-size:22px;
   
 </ul>
 
-<body style = "background-color:#deabed;"> 
+<body> 
 
         <div id="pagepiling">
-	<div  align = "center" class="section" id= "section1"> <p><strong>Software as a Service (SaaS) - Salesforce</strong>
+	<div class="section" id= "section1"> <p><strong>Software as a Service (SaaS) - Salesforce</strong>
 	<br/>
 	Sales force was launched in 1999 and has grown exponentially ever since, with 150000 customers today. The headquarters are located in San Francisco, California. The CRM product is by far the most popular with a market share if 19.7%. It also has a customer relationship management platform that includes a marketing cloud solution. </p>
 <br/>
@@ -96,7 +103,7 @@ font-size:22px;
 </p>
 </div>
 
-	<div align = "center" class="section" id= "section2"><p><strong> Platform as a Service (PaaS) - Cloud 9</strong>
+	<div class="section" id= "section2"><p><strong> Platform as a Service (PaaS) - Cloud 9</strong>
 	<br/>
 	Cloud9 is a cloud-based integrated development environment (IDE) that lets you write, run, and debug your code with just a browser. It includes a code editor, debugger, and terminal. Cloud9 comes pre-packaged with essential tools for popular programming languages including JavaScript, Python, PHP, and more, so you don’t need to install files or configure your development machine to start new projects
 <br/>
@@ -105,7 +112,7 @@ font-size:22px;
 </p>
 </div>
 
-	<div align = "center" class="section" id= "section3"><p><strong>Infrastructure as a Service (IaaS) - Amazon</strong>
+	<div class="section" id= "section3"><p><strong>Infrastructure as a Service (IaaS) - Amazon</strong>
 	    <br/>
 	Amazon Web Services is a subsidiary of Amazon.com that provides on-demand cloud computing platforms to individuals, companies and governments, on a paid subscription basis. Amazon web services are a cloud computing platform offered by the amazon- a wide system of pay as you go data centres that provide the infrastructure to deal world Wide Web
 
@@ -115,7 +122,7 @@ font-size:22px;
 
 	</div>
 	
-<div align = "center" class="section" id= "section4"><p><strong> Communication as a Service (CaaS) - Gmail</strong>
+<div class="section" id= "section4"><p><strong> Communication as a Service (CaaS) - Gmail</strong>
 	    <br/>
  Gmail is a free, advertising-supported email service developed by Google. Users can access Gmail on the web and using third-party programs that synchronize email content through POP or IMAP protocols
 
