--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -12,6 +12,11 @@ p  {
     color: black;
     font-family: courier;
     font-size: 150%;
+    text-align:center;
+
+}
+div {
+     text-align:center;
 }
 ul {
     list-style-type: none;
@@ -110,9 +115,9 @@ img {
        
        <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
-        <div  align = "center" class="row">
+        <div class="row">
 
-            <div align = "center"  class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Me</h2>
                 <p></p>
                 <p><a href="mailto:117321436@umail.ucc.ie">117321436@umail.ucc.ie</a>
@@ -131,16 +136,16 @@ img {
 
        <!--<footer>-->
 	<div id="footerCV">
-		<div align = "center" id="social_media_icons" >
+		<div id="social_media_icons" >
 		<ul>
 			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
-				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" alt ="logo" style="width:30px;height:30px;">
 			</a></li>	
 			<li><a href="https://www.instagram.com/smtechnoligies/" >
-				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>					
 			<li><a href="https://twitter.com/smtechnoligies" >
-				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" style="width:30px;height:30px;"id="icon_size">
+				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" alt ="logo" style="width:30px;height:30px;">
 			</a></li>						
 		</ul>	
 		</div>
@@ -149,7 +154,7 @@ img {
 		<br/>
 		<br/>
 		
-		<div align = "Center" id="copyright">
+		<div id="copyright">
   		&copy; Stephanie Mangan
   		<p></p>
 	</div>
