--- a/CV/cvpage2.html
+++ b/CV/cvpage2.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Adding style-->
           <style>
+          
 h1 {
     color: black;
     font-family: courier;
@@ -18,9 +20,7 @@ p  {
 div {
         text-align:center;
 }
-h2 { 
-    text-align:center;
-}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -63,8 +63,9 @@ img {
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
-        
+        <!--Adding a heading-->
          <h1 style="background-color:DodgerBlue;"  class="mainheading" > Education </h1>
+                 <!--Adding the nav bar-->
            <ul>
   <li><a href="../homepage.html">Home</a></li>
   <li><a href="../Interests/Sports.html">Interests</a></li>
@@ -130,15 +131,15 @@ img {
 	<div id="footerCV">
 		<div id="social_media_icons" >
 		<ul>
-			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
+			<li>
 				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" alt ="logo" style="width:30px;height:30px;">
-			</a></li>	
-			<li><a href="https://www.instagram.com/smtechnoligies/" >
+			</li>	
+			<li>
 				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" alt ="logo" style="width:30px;height:30px;">
-			</a></li>					
-			<li><a href="https://twitter.com/smtechnoligies" >
+		</li>					
+			<li>
 				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" alt ="logo" style="width:30px;height:30px;">
-			</a></li>						
+		</li>						
 		</ul>	
 		</div>
 		
