--- a/CV/cvpage3.html
+++ b/CV/cvpage3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Adding style-->
         <style>
 h1 {
     color: black;
@@ -66,8 +67,9 @@ img {
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
-        
+        <!--Adding a heading-->
          <h1 style="background-color:DodgerBlue;"  class="mainheading" > Work Experience </h1>
+             <!--Adding the nav bar-->
            <ul>
  <li><a href="../homepage.html">Home</a></li>
   <li><a href="../Interests/Sports.html">Interests</a></li>
@@ -79,7 +81,7 @@ img {
 
        <div>
            <h3><strong>Scoozis: </Strong> </h3>
-        <p>At the moment, I am currenlty wokring as a waitress in Scoozis restaurant. My duties include setting and clearing the tables, taking customers orders and bringing them their food and drink. I usually work 3 times a week and on average do 20 hours a week.</p>
+        <p>I am currently wokring as a waitress in Scoozi's restaurant. My duties include setting and clearing the tables, taking customers' orders and bringing them their food and drink. I usually work 3 times a week and on average do 20 hours a week.</p>
         <br/>
         <br/>
         <h3><strong>Baby Sitting: </strong></h3>
@@ -132,15 +134,15 @@ img {
 	<div id="footerCV">
 		<div id="social_media_icons" >
 		<ul>
-			<li><a href="https://www.facebook.com/SM-Technologies-169852070222957/?notif_id=1520254152324891&notif_t=page_invite" >
+			<li>
 				<img src="https://seeklogo.com/images/F/facebook-logo-39A76724E4-seeklogo.com.png" alt ="logo" style="width:30px;height:30px;">
-			</a></li>	
-			<li><a href="https://www.instagram.com/smtechnoligies/" >
+			</li>	
+			<li>
 				<img src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg" alt ="logo" style="width:30px;height:30px;">
-			</a></li>					
-			<li><a href="https://twitter.com/smtechnoligies" >
+		</li>					
+			<li>
 				<img src="https://cdn.worldvectorlogo.com/logos/twitter-4.svg" alt ="logo" style="width:30px;height:30px;">
-			</a></li>						
+		</li>						
 		</ul>	
 		</div>
 		
