--- a/Interests/Sports.html
+++ b/Interests/Sports.html
@@ -13,7 +13,6 @@ p  {
     color: black;
     font-family: courier;
     font-size: 150%;
-    text-align:center;
 
 }
 div {
@@ -94,11 +93,9 @@ img {
 
 <br>
 
-<p> I started playing camogie when I was 9 years old. In 2016 we won the intermediate championship, so we have been playing Senior B ever since. I also used to play on the under 16 Cork team. </p>
+<p align = "center"> I started playing camogie when I was 9 years old. In 2016 we won the intermediate championship, so we have been playing Senior B ever since. I also used to play on the under 16 Cork team. </p>
 
-<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" alt ="logo" style="margin-left:25%;width:30px;height:30px;">
-
-<br/>
+<p><img src="https://pbs.twimg.com/profile_images/926227981831417857/J9Sz7Wqu_400x400.jpg" alt ="logo" style="margin-left:25%;width:300px;height:300px;">
 <br/>
 <br/>
 
